--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,35 @@
-/* You can add global styles to this file, and also import other style files */
+html, body {
+    margin: 0;
+    padding: 0;
+    font-family: "Work Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+}
+
+nav.navbar {
+    background-color: #ebdff8;
+    padding: 0px 10px;
+    border: 0;
+    box-sizing: border-box;
+    height: 50px;
+    align-content: center;
+}
+
+.navbar-brand {
+    font-family: "SUSE", sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 1.5em;
+    color: #3d017e; 
+}
+
+nav h1 {
+    margin-block-start: 0 !important;
+    margin-block-end: 0 !important;
+}
+
+.container-fluid {
+    padding: 0 !important;
+}
