--- a/src/app/grocery/grocery.component.html
+++ b/src/app/grocery/grocery.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="list-container">
     <div class="row">
         <div class="col-md-4">
             <div class="input-group">
@@ -12,7 +12,11 @@
             </div>
         </div>
     </div>
-    <hr>
+
+    <div class="hr-container">
+    <hr />
+    </div>
+
     <div class="grocery-list">
         <h3>Your Grocery List:</h3>
         <ul class="list-group">
